profilelist1exp/unpackaged/objects/Services_Provided__c.object
<CustomObject>
    <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Provided</relationshipLabel>
        <relationshipName>Services_Provided</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product_Desc_Hidden__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided. This field is not used in the Layout and for only technical purpose.</description>
        <label>Product Desc Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Desc__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
        <formula>Services_Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Hidden__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided. This field is not used in the Layout and for only technical purpose.</description>
        <label>Product Group Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
        <formula>Services_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Desc_Hidden__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided. This field is not used in the Layout and for only technical purpose.</description>
        <label>Product Line Desc Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Desc__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
        <formula>Services_Product__r.Product_Line_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided.</description>
        <label>Brand Desc</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Services Provided</relationshipLabel>
        <relationshipName>Services_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created for CR 12482 : Story 200936: RTB: CRMT: Customer Reference Services Provided. This field will show whether the Services Product is Active or not.</description>
        <formula>IF(Services_Product__r.IsActive == True, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Services Provided</label>
    <nameField>
        <displayFormat>CRMT SP {0000}</displayFormat>
        <label>Services Provided Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Provided</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>